<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_TwoPositionPopIn" Id="{ac64dc66-57f1-4884-a580-842c663d8495}">
    <Declaration><![CDATA[TYPE ST_TwoPositionPopIn :
STRUCT
	//Controls
	InsertPos2Cmd : BOOL;
	RetractPos1Cmd : BOOL;
	
	//Statuses
	InsertedPos2St : BOOL;
	RetractedPos1St : BOOL;
	
	InterlockSt :BOOL;
	
	StateSt : E_2PosMonState;
		
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>